kube/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaycodesit-mysql
spec:
  selector:
    matchLabels:
      app: jaycodesit-mysql
  template:
    metadata:
      labels:
        app: jaycodesit-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: jaycodesit-mysql-pvc
