kube/wordpress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaycodesit-wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaycodesit-wordpress
  template:
    metadata:
      labels:
        app: jaycodesit-wordpress
    spec:
      containers:
        - name: wordpress
          image: jaycodesit/site:TAG_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html/wp-content
          livenessProbe:
            httpGet:
              path: /wp-login.php
              port: 80
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /wp-login.php
              port: 80
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /wp-login.php
              port: 80
              scheme: HTTPS
            initialDelaySeconds: 60
            periodSeconds: 10
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: jaycodesit-wordpress-pvc
