kube/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jaycodesit-mysql
spec:
  selector:
    app: jaycodesit-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
