kube/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaycodesit-mysql
spec:
  selector:
    matchLabels:
      app: jaycodesit-mysql
  template:
    metadata:
      labels:
        app: jaycodesit-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306  # MySQL port
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: jaycodesit-mysql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: jaycodesit-mysql
spec:
  selector:
    app: jaycodesit-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
