kube/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jaycodesit-wordpress
spec:
  type: NodePort
  selector:
    app: jaycodesit-wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
