kube/wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaycodesit-wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaycodesit-wordpress
  template:
    metadata:
      labels:
        app: jaycodesit-wordpress
    spec:
      containers:
        - name: wordpress
          image: jaycodesit/site:TAG_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-uploads-storage
              mountPath: /var/www/html/wp-content/uploads
            - name: gdrive-secret
              mountPath: /var/secrets/google
              readOnly: true
      volumes:
        - name: wordpress-uploads-storage
          persistentVolumeClaim:
            claimName: jaycodesit-wordpress-uploads-pvc
        - name: gdrive-secret
          secret:
            secretName: gdrive-service-account # Name of the secret containing your service account JSON

---
apiVersion: v1
kind: Service
metadata:
  name: jaycodesit-wordpress
spec:
  type: NodePort
  selector:
    app: jaycodesit-wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
