kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaycodesit-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jaycodesit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaycodesit-wordpress
                port:
                  number: 80
    - host: www.jaycodesit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaycodesit-wordpress
                port:
                  number: 80
