kube/system.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaycodesit-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  tls:
    - hosts:
        - jaycodesit.com
        - www.jaycodesit.com
      secretName: jaycodesit-com-tls
  rules:
    - host: jaycodesit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaycodesit-wordpress
                port:
                  number: 80
    - host: www.jaycodesit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaycodesit-wordpress
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
        - name: controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:latest
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-custom-template
          volumeMounts:
            - name: custom-log-config
              mountPath: /etc/nginx/conf.d/custom-log-format.conf
              subPath: custom-log-format.conf
      volumes:
        - name: custom-log-config
          configMap:
            name: nginx-custom-template
